--- a/test/src/styles.css
+++ b/test/src/styles.css
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+}
+html{
+    height: 100%;
+    width: 100%;
+    background:linear-gradient(#890C58, #3C1053);
+}
+h1{
+font-size: 100px;
+text-align: center;
+background-clip: text;
+-webkit-text-fill-color: transparent;
+background-image: linear-gradient(#4AC9E3, #F4AF23);
+}
+p{
+    font-size: 50px;
+    text-align: center;
+    color: #D7A9E3;
+}
