--- a/test/src/styles.css
+++ b/test/src/styles.css
@@ -4,6 +4,15 @@
     margin: 0;
     padding: 0;
 }
+button{
+    text-align: center;
+    color:#D7A9E3;
+    background-color: #3C1053;
+    padding: 1%;
+    border:#F4AF23;
+    border-style: groove;
+    font-size: 250%;
+}
 html{
     height: 100%;
     width: 100%;
@@ -15,6 +24,11 @@ text-align: center;
 background-clip: text;
 -webkit-text-fill-color: transparent;
 background-image: linear-gradient(#4AC9E3, #F4AF23);
+}
+.modifierButtons{
+    display: flex;
+    justify-content: space-between;
+    padding: 5%;
 }
 p{
     font-size: 50px;
