--- a/test/src/styles.css
+++ b/test/src/styles.css
@@ -14,6 +14,7 @@ button{
     font-size: 250%;
 }
 .column {
+  margin-top: 5%;
     text-align: center;
     border:#F4AF23;
     border-style: double;
@@ -22,6 +23,7 @@ button{
     width: fit-content;
     font-size: 200%;
     margin: auto;
+    padding: 1%;
     
   }
   
